hapus auth untuk detail produk
